<resources>
    <string name="app_name">ToDoApp</string>
    <string name="action_settings">Settings</string>
    <string name="developer">Developer</string>
    <string name="t_existing_user_login_here_t">Existing User Login Here</string>
    <string name="t_new_user_register_here_t">New User Register Here</string>
    <string name="title_activity_register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="add_user">SIGN UP</string>
    <string name="title_activity_login_here">LoginHere</string>
    <string name="enter_username">" "Enter UserName</string>
    <string name="enter_password">" "Enter Password</string>
    <string name="title_activity_write_here">WriteHere</string>
    <string name="save_data">SAVE DATA AND EXIT</string>
    <string name="start_writing_here">"              "Start Writing Here</string>
    <string name="title_activity_developer">Developer</string>
    <string name="text">A Student Who Loves To Work on Offbeat Ideas And Is Continuously Working To Do Something Big Through These Little Ideas.<br/>
            Catch My Other Activities On GitHub From The Link Provided Below.
       </string>
    <string name="developer_s_profile">Developer\'s Profile</string>
</resources>
